--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
@@ -150,6 +150,7 @@
                             &nbsp;&nbsp;
                             <label class="QueryLab">Style</label>
                             <input type="text" name="StyleID" id="txtStyle" class="searchText12vw" value="@Model.StyleID" />
+                            <input type="hidden" name="OrderTypeSerialKey" id="txtOrderTypeSerialKey" value="@Model.OrderTypeSerialKey" />
                             <input id="btnStyle" type="button" class="site-btn btn-blue" style="margin:0;border: 2px solid transparent;" name="" value="..." />
                             &nbsp;&nbsp;
                             <input type="submit" name="action:Query" id="btnQuery" value="Query" />
@@ -157,7 +158,7 @@
                             <input id="btnBarcode" type="button" class="site-btn" style="margin:0;border: 2px solid transparent;" value="   " />
 
                             @*測試專用按鈕
-                    <input id="btnPicture" type="button" class="site-btn btn-blue" style="margin:0;border: 2px solid transparent;" name="" value="..." />*@
+        <input id="btnPicture" type="button" class="site-btn btn-blue" style="margin:0;border: 2px solid transparent;" name="" value="..." />*@
 
                         </div>
 
