--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
@@ -87,15 +87,19 @@
         width: 92vw;
     }
 
+    .DetailTable {
+        width: 170vw;
+    }
+
     .DataTable {
-        width: 92vw;
         font-size: 1rem;
         font-weight: bold;
         border: solid 1px black;
         background-color: white;
     }
-        .DataTable > tbody img{
-            cursor:pointer;
+
+        .DataTable > tbody img {
+            cursor: pointer;
         }
 
         .DataTable > tbody > tr:nth-of-type(odd) {
@@ -112,6 +116,22 @@
             text-align: left;
             vertical-align: middle;
         }
+
+    .aiCommentTooltipText {
+        visibility: hidden;
+        position: fixed;
+        z-index: 9999;
+        background-color: pink;
+        border: 1px solid black;
+        border-radius: 2px;
+        color: black;
+        font-size: 1rem;
+        padding: 0.5rem;
+    }
+
+    .aiCommentTooltip:hover .aiCommentTooltipText {
+        visibility: visible;
+    }
 </style>
 
 <div class="main-content">
@@ -160,7 +180,7 @@
                     </div>
                 }
 
-                <div style="margin-top: 1em;">
+                <div style="">
                     <table id="ButtonMode">
                         <tbody>
                             <tr>
@@ -194,9 +214,9 @@
                         </tbody>
                     </table>
                 </div>
-
-                <div style="margin-top: 1em;">
-                    <table class="DataTable">
+                <br />
+                <div style="">
+                    <table class="DataTable" style="width:92vw;">
                         <tbody>
                             <tr>
                                 <td style="width: 10vw;"><h5>Style#</h5></td>
@@ -328,7 +348,8 @@
                         </tbody>
                     </table>
                 </div>
-                <div style="margin-top: 1em; overflow:auto;">
+                <br />
+                <div style="overflow:auto;">
                     <table class="DetailTable DataTable">
                         <thead>
                             @{
@@ -378,7 +399,7 @@
                                     string status = string.IsNullOrEmpty(Model.garmentTest_Details[i].Status) ? string.Empty : Model.garmentTest_Details[i].Status.ToLower();
                                     string aHref = "";
                                     <tr idx="@i">
-                                        <td style="width:10vw;text-align-last:center;">
+                                        <td style="text-align-last:center;">
 
                                             @if (Model.garmentTest_Details[i].ID > 0)
                                             {
@@ -398,10 +419,10 @@
                                                 </a>
                                             }
                                         </td>
-                                        <td style="width:10vw;">
-                                            @Html.TextBoxFor(o => Model.garmentTest_Details[i].OrderID, "", new { @class = "Detail_OrderID",@idx=i })
+                                        <td style="">
+                                            @Html.TextBoxFor(o => Model.garmentTest_Details[i].OrderID, "", new { @class = "Detail_OrderID", @idx = i })
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             <select class="Detail_SizeCode" id="Model.garmentTest_Details_@{@i}__.SizeCode" name="Model.garmentTest_Details[@i].SizeCode" disabled="disabled">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.SizeCodeList)
                                                 {
@@ -410,10 +431,10 @@
                                                 }
                                             </select>
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @Html.TextBoxFor(o => Model.garmentTest_Details[i].inspdate, "{0:yyyy/MM/dd HH:mm:ss}", new { @readonly = "readonly" })
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             <select id="Model_garmentTest_Details_@{@i}__MtlTypeID" name="Model.garmentTest_Details[@i].MtlTypeID" disabled="disabled">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.MtlTypeIDList)
                                                 {
@@ -427,10 +448,10 @@
                                             string garmentTest_DetailsVal = Model.garmentTest_Details[i].Result == "P" || Model.garmentTest_Details[i].Result == "Pass" ? "Pass" :
                                                             string.IsNullOrEmpty(Model.garmentTest_Details[i].Result) ? string.Empty : "Fail";
                                         }
-                                        <td class="@garmentTest_DetailsFontColor" style="width:10vw;">
+                                        <td class="@garmentTest_DetailsFontColor" style="">
                                             @garmentTest_DetailsVal
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @{
                                                 bool NonSeamBreakageTestVal = Model.garmentTest_Details[i].NonSeamBreakageTest;
                                             }
@@ -448,13 +469,28 @@
                                             string WashResultDetailVal = Model.garmentTest_Details[i].WashResult == "P" || Model.garmentTest_Details[i].WashResult == "Pass" ? "Pass" :
                                                                     string.IsNullOrEmpty(Model.garmentTest_Details[i].WashResult) ? string.Empty : "Fail";
                                         }
-                                        <td style="width:10vw;" class="@SeamBreakageResultFontColor">
+                                        <td style="" class="aiCommentTooltip @SeamBreakageResultFontColor">
+                                            @if (SeamBreakageResultVal == "Fail")
+                                            {
+                                                <div class="aiCommentTooltipText">@Model.garmentTest_Details[i].SeamBreakageAIComment</div>
+                                                <img src="~/Image/Icon/Warning.png" width="25" height="25" class="" />
+                                            }
                                             @SeamBreakageResultVal
                                         </td>
-                                        <td style="width:10vw;" class="@OdourResultDetailFontColor">
+                                        <td style="" class="aiCommentTooltip @OdourResultDetailFontColor">
+                                            @if (OdourResultDetailVal == "Fail")
+                                            {
+                                                <div class="aiCommentTooltipText">@Model.garmentTest_Details[i].OdourAIComment</div>
+                                                <img src="~/Image/Icon/Warning.png" width="25" height="25" class="" />
+                                            }
                                             @OdourResultDetailVal
                                         </td>
-                                        <td style="width:10vw;" class="@WashResultDetailFontColor">
+                                        <td style="" class="aiCommentTooltip @WashResultDetailFontColor">
+                                            @if (WashResultDetailVal == "Fail")
+                                            {
+                                                <div class="aiCommentTooltipText">@Model.garmentTest_Details[i].WashAIComment</div>
+                                                <img src="~/Image/Icon/Warning.png" width="25" height="25" class="" />
+                                            }
                                             @WashResultDetailVal
                                         </td>
                                         <td style="width:10vw;">
@@ -463,45 +499,45 @@
                                                 <input class="btnDetailInspectorSelectItem site-btn btn-blue" type="button" style="margin:0;border:0;" value="..." />
                                             </div>
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @Html.TextBoxFor(o => Model.garmentTest_Details[i].GarmentTest_Detail_Inspector, "", new { @readonly = "readonly", @style = "width: 8vw", @class = "inspectorName" })
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @Html.TextBoxFor(o => Model.garmentTest_Details[i].Remark, "", "")
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             <img class="SendMail" src="~/Image/Icon/Mail.png" width="30" />
                                         </td>
-                                        <td class="Sender" style="width:10vw;">
+                                        <td class="Sender" style="">
                                             @Html.DisplayFor(o => Model.garmentTest_Details[i].Sender, "", "")
                                         </td>
-                                        <td class="SendDate" style="width:10vw;">
+                                        <td class="SendDate" style="">
                                             @{
                                                 var SendDateVal = Model.garmentTest_Details[i].SendDate.HasValue ? Model.garmentTest_Details[i].SendDate.Value.ToString("yyyy/MM/dd HH:mm:ss") : "";
                                             }
 
                                             @SendDateVal
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             <img class="ReceiveMail" src="~/Image/Icon/Mail.png" width="30" />
                                         </td>
-                                        <td class="Receiver" style="width:10vw;">
+                                        <td class="Receiver" style="">
                                             @Html.DisplayFor(o => Model.garmentTest_Details[i].Receiver, "", "")
                                         </td>
-                                        <td class="ReceiveDate" style="width:10vw;">
+                                        <td class="ReceiveDate" style="">
                                             @{
                                                 var ReceiveDateVal = Model.garmentTest_Details[i].ReceiveDate.HasValue ? Model.garmentTest_Details[i].ReceiveDate.Value.ToString("yyyy/MM/dd HH:mm:ss") : "";
                                             }
 
                                             @ReceiveDateVal
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @Html.DisplayFor(o => Model.garmentTest_Details[i].GarmentTest_Detail_AddName, "", "")
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @Html.DisplayFor(o => Model.garmentTest_Details[i].GarmentTest_Detail_EditName, "", "")
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @if (status == "new")
                                             {
                                                 <img class="detailEdit" src="~/Image/Icon/Edit.png" width="30" />
@@ -514,7 +550,7 @@
                                                 </a>
                                             }
                                         </td>
-                                        <td style="width:10vw;">
+                                        <td style="">
                                             @if (status == "new")
                                             {
                                                 <img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />
