--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
@@ -346,8 +346,9 @@
                         para += "&CC=@Model.sampleRFTInspection.CCMail";
                         para += "&Subject=" + "Sample RFT Inspection Report - SP : @Model.sampleRFTInspection.OrderID";
                         para += "&Body=" + "Sample RFT Inspection Report Detail";
+                        para += "&ID=" + '@Model.sampleRFTInspection.ID';
                         para += "&file=" + data.FileName;
-                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
+                        window.open('@Url.Action("SendMailer")' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
                     }
                     else {
                         msg.WithError(data.ErrorMessage);
