--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -626,6 +626,9 @@
                         para += "&Subject=" + "Fabric Heat Test – Seq:" + '@Model.Heat_Main.SEQ';
                         para += "&Body=" + "Attachment is Fabric Heat Test– Seq:" + '@Model.Heat_Main.SEQ' + " detail data";
                         para += "&file=" + data.FileName;
+                        @*para += "&IsShowAIComment=true";
+                        para += "&Type=Fabric Crocking & Shrinkage Test";
+                        para += "&OrderID=" + '@Model.Heat_Main.POID';*@
                         window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
                     }
                     else {
@@ -737,12 +740,13 @@
             to += value.To + ';';
             cc += value.CC + ';';
         });
+        var poid = '@Model.Heat_Main.POID';
 
         $.ajax({
             url: "@Url.Action("FailMail_Heat", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ID: $('#ID').val(), TO: to, CC: cc }),
+            data: JSON.stringify({ ID: $('#ID').val(), TO: to, CC: cc, OrderID: poid }),
             async: false,
             success: function (data) {
                 if (data.result) {
