--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -75,6 +75,23 @@
         height: 70vh;
         overflow-y:scroll;
     }
+    .aiCommentTooltipText {
+        visibility: hidden;
+        position: absolute;
+        /*top: 30%;*/ /* 距離上方50%的位置 */
+        /*left: 15%;*/ /* 距離左邊50%的位置 */
+        z-index: 9999;
+        background-color: pink;
+        border: 1px solid black;
+        border-radius: 2px;
+        color: black;
+        font-size: 1rem;
+        padding: 0.5rem;
+    }
+
+    .aiCommentTooltip:hover .aiCommentTooltipText {
+        visibility: visible;
+    }
 </style>
 <div class="main-content">
 
@@ -368,8 +385,14 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Artwork)
                                 </td>
-                                <td style="color: @color">
+                                <td style="color: @color" class="aiCommentTooltip">
                                     @Html.DisplayFor(modelItem => item.Result)
+
+                                    @if (item.Result == "Fail")
+                                    {
+                                        <div class="aiCommentTooltipText">@item.AIComment</div>
+                                        <img src="~/Image/Icon/Warning.png" width="25" height="25" class="" />
+                                    }
                                 </td>
                                 <td>
                                     @{string ReceivedDate = item.ReceivedDate.HasValue ? item.ReceivedDate.Value.ToShortDateString() : ""; }
