--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -389,7 +389,10 @@
                             para += "&CC=" + '@ViewBag.UserMail';
                             para += "&Subject=" + "Accessory Oven Test – ReportNo:" + '@Model.ReportNo';
                             para += "&Body=" + "Attachment is Accessory Oven Test– ReportNo:" + '@Model.ReportNo' + " detail data";
-                            para += "&file=" + data.FileName;
+                            para += "&CC=" + '@ViewBag.UserMail';
+                            @*para += "&IsShowAIComment=true";
+                            para += "&Type=Accessory Oven & Wash Test";
+                            para += "&OrderID=" + '@Model.POID';*@
                             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
                         }
                         else {
