--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -439,6 +439,9 @@
                             para += "&Subject=" + "Accessory Wash Test – ReportNo:" + '@Model.ReportNo';
                             para += "&Body=" + "Attachment is Accessory Oven Test– ReportNo:" + '@Model.ReportNo' + " detail data";
                             para += "&file=" + data.FileName;
+                            @*para += "&IsShowAIComment=true";
+                            para += "&Type=Accessory Oven & Wash Test";
+                            para += "&OrderID=" + '@Model.POID';*@
                             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
                         }
                         else {
