--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -1309,6 +1309,9 @@
                             para += "&Subject=" + "Washing Fastness Test – ReportNo:" + '@Model.Main.ID';
                             para += "&Body=" + "Attachment is Washing Fastness Test– ReportNo:" + '@Model.Main.ID' + " detail data";
                             para += "&file=" + data.FileName;
+                            @*para += "&IsShowAIComment=true";
+                            para += "&Type=Washing Fastness";
+                            para += "&OrderID=" + '@Model.Main.POID';*@
                             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
                         }
                         else {
