--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -1185,6 +1185,9 @@
                         para += "&Subject=" + "Mockup Wash Test – ReportNo:" + $('#ReportNo').val() + " – Style: " + $('#StyleID').val();
                         para += "&Body=" + "Attachment is Mockup Wash Test– ReportNo:" + $('#ReportNo').val() + " detail data";
                         para += "&file=" + data.FileName;
+                        @*para += "&IsShowAIComment=true";
+                        para += "&Type=Mockup Wash Test";
+                        para += "&OrderID=" + '@Model.POID';*@
                         window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
                     }
                     else {
@@ -1290,7 +1293,7 @@
         ReportNoClear(targetID);
     }
 
-    function GetSeasonList(data, targetID) {        
+    function GetSeasonList(data, targetID) {
         $('#' + targetID).val(data);
         GetArtworkTypeIDList();
         GetAccessoryRefNoList();
@@ -1421,7 +1424,7 @@
             }
             $(this).removeClass('blue').removeClass('red').addClass(color);
         });
-        
+
         $('#Result').html(result).removeClass('blue').removeClass('red').addClass(color);
     }
 
