--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -199,7 +199,7 @@
                 <li link="#tab07">Others</li>
             </ul>
             <div id="tab01" class="tab-inner">
-                <div style="height:auto">
+                <div style="height:100%;overflow:scroll;">
                     @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml")
                 </div>
             </div>
