ISP20230697 - [Style Result] [Bulk FGT] 增加Report, [Home] 增加台北端導頁

--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab4_Layout.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab4_Layout.cshtml
@@ -27,6 +27,7 @@
             <th>Test Name</th>
             <th>Last Result</th>
             <th>Last Test Date</th>
+            <th>Test Report</th>
         </tr>
     </thead>
     <tbody>
@@ -45,6 +46,16 @@
                     <td>
                         @{ string LastTestDate = item.LastTestDate.HasValue ? item.LastTestDate.Value.ToShortDateString() : string.Empty;}
                         @LastTestDate
+                    </td>
+                    <td>
+                        @{ 
+                            if (!string.IsNullOrEmpty(LastTestDate))
+                            {
+                                <a href='@Url.Action("DownloadBulkReport", "StyleResult", new { BrandID = Model.BrandID, SeasonID = Model.SeasonID, StyleID = Model.StyleID, Article = item.Article, Type = item.Type })'>
+                                    <img class="BulkReport" src="~/Image/Icon/Document.png" width="15"/>
+                                </a>                                
+                            }
+                        }
                     </td>
                 </tr>
             }
